# happinesspackets

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Pipfile  Procfile  README.rst  circle.yml  docker-startup.sh  fly.toml  manage.py  pyproject.toml  run_ci_tests.bash  setup.cfg  t
.circleci/: config.yml
.github/workflows/: django.yml  docker-publish.yml
assets/css/: custom.css
assets/js/: main.js
happinesspackets/: urls.py  wsgi.py
happinesspackets/integration_tests/: integration_test_messaging.py  utils.py
happinesspackets/messaging/: forms.py  models.py  urls.py  views.py
happinesspackets/settings/: base.py  ci.py  deployment.py  dev.py  tsting.py
happinesspackets/utils/: middleware.py  misc.py
oslove/: urls.py  wsgi.py
oslove/integration_tests/: integration_test_.py  integration_test_messaging.py
oslove/messaging/: forms.py  models.py  urls.py  views.py
oslove/settings/: base.py  ci.py  deployment.py  dev.py
oslove/utils/: misc.py
requirements/: base.txt  dev.txt  production.txt
templates/: _email_footer.txt  base.html  base_email.html  locked_out.html
templates/messaging/: _message_list_more_content.html  archive.html  blacklist_email.html  example_form.html  faq.html  inspiration.html  message_recipient_form.html  message_send_form.html  message_sender_confirmation_failed.html  message_sender_confirmed.html  message_sent.html  recipient_mail.html  recipient_mail.txt  recipient_subject.txt  sender_confirmation_mail.html  sender_confirmation_mail.txt  sender_confirmation_subject.txt  start.html
(+6 files in other folders)
